Wed Dec 13 13:20:45 GMT 2000 Olly Betts

	* Elaborated API hitlist in todo.xml.

Wed Dec 13 12:28:18 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fix to BackendManager to stop it removing tables prematurely.

Wed Dec 13 11:49:53 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Apply the stemmer to query terms used in spaceterms1.  (Not doing
	  so caused the test to fail spuriously on local databases, since the
	  terms are stemmed at index time).  The test still fails with da and
	  db databases.
	
	* Fixed a problem when stats were unpacked from the network stream,
	  where term names were not correctly unquoted.  This led to double
	  quoting of global statistics.

Wed Dec 13 02:49:05 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement copy and assignment methods for OmPositionListIterator.

Wed Dec 13 02:37:14 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* ESet and MSet iterators now cope with being copied / assigned when
	  the internals are null.

	* Added copy method to OmPositionListIterator interface.  No
	  implementation for this yet though, or for the already existing
	  assignment method.

	* Added a couple of easy items to the todo list to check regarding
	  iterators.

Wed Dec 13 02:19:50 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix small bug in mset_range_is_same{,_weights}()

Wed Dec 13 02:07:59 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* And add copy and assignment for OmESet, similarly.

Wed Dec 13 01:58:38 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add copy and assignment operators to OmMSet so that the internals
	  get copied (rather than just the pointer to them).  Really want a
	  small internals class, holding a refcount to the real internals, or
	  else to use refcntptrs for the members of OmMSet::Internal which are
	  potentially large (eg, items)
