@@ -309,6 +309,16 @@ QuartzDiskTableManager::get_record_table()
     return &record_table;
 }
 
+void
+QuartzDiskTableManager::reopen_after_overwritten()
+{
+    if (readonly) {
+	open_tables_consistent();
+    } else {
+	throw OmDatabaseCorruptError("Found overwritten block in writable database");
+    }
+}
+
 
 QuartzBufferedTableManager::QuartzBufferedTableManager(std::string db_dir_,
 						       std::string log_filename,
@@ -508,3 +518,8 @@ QuartzBufferedTableManager::get_record_table()
     return &record_buffered_table;
 }
 
+void
+QuartzBufferedTableManager::reopen_after_overwritten()
+{
+    disktables.reopen_after_overwritten();
+}
