@@ -260,6 +260,17 @@ class Database : public RefCntBase {
 	 */
 	virtual Document * open_document(om_docid did) const = 0;
 
+	/** Recover from an overwritten database.
+	 *  Sometimes a database may get confused if another process or
+	 *  object writes to the database underneath it, causing it to
+	 *  throw an OmDatabaseModifiedError.
+	 *  Calling this method means that it is OK to re-open the tables -
+	 *  ie it can start from fresh without possibly confusing the
+	 *  higher-level code using it.
+	 *
+	 *  Some database implementations may do nothing.
+	 */
+	virtual void recover_from_overwritten();
 
 	//////////////////////////////////////////////////////////////////
 	// Modifying the database:
@@ -354,6 +365,10 @@ class Database : public RefCntBase {
 inline bool Database::is_network() const
 {
     return false;
+}
+
+inline void Database::recover_from_overwritten()
+{
 }
 
 #endif /* OM_HGUARD_DATABASE_H */
