@@ -1,3 +1,8 @@
+Wed Dec 13 14:30:57 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added support for handling overwritten database conditions.
+	  Currently works for OmDocument::get_{data,key}().
+
 Wed Dec 13 13:20:45 GMT 2000 Olly Betts
 
 	* Elaborated API hitlist in todo.xml.
